source zip instead of tgz